caption positioning, preventing visible line

--- a/history.scss
+++ b/history.scss
@@ -197,7 +197,7 @@ header.decade {
                 font-size: .75em;
                 padding: 10px;
                 position: absolute;
-                bottom: -8%;
+                bottom: -30px;
                 left: 0;
                 background: inherit;
                 width: 100%;
